name:                hed
version:             0.1
synopsis:            A rough `ed` clone in Haskell.
-- description:
homepage:            https://github.com/relrod/hed
license:             BSD3
license-file:        LICENSE
author:              Ricky Elrod
maintainer:          ricky@elrod.me
-- copyright:
category:            Text
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >= 1.10

executable hed
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >= 4 && < 5
                     , bytestring >= 0.10 && < 0.11
                     , attoparsec >= 0.11 && < 1
                     , containers >= 0.5.8 && < 1
  hs-source-dirs:      src
  default-language:    Haskell2010
